# FactoryAI

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml  sync.sh
factoryai/: __init__.py  cli.py  config.py  core.py  exceptions.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_utils.py
